terraform/03-applications/modules/01-certificate/manifests/https-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: ${app_name}-https-gateway
  namespace: traefik
  annotations:
    cert-manager.io/issuer: ${app_name}-letsencrypt-prod-issuer
spec:
  gatewayClassName: traefik
  listeners:
    - name: ${app_name}-https
      hostname: ${domain}
      port: 8443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: ${app_name}-prod-tls
